# dockerfiles

./: .gitignore  README.md  TODO  TODO.md  Virtuoso71  server.R  ui.R
Owlim-lite/: Dockerfile  README.txt
Python2.7/buildpack-deps-cluster/: Dockerfile  python_include.sh
Rocker/: Dockerfile  README.md  host-nginx-rstudio.conf
Services/Autobench/: .gitignore  Dockerfile  README.md
VCFotf/: Dockerfile  config.yml  data.vcf.gz.tbi  query_parameters.sparql  run_otf_endpoint.sh
centos7-systemd/: Dockerfile
chef/: docker-default.patch  upgrade-kernel.rb
cluster/: Dockerfile  README.md  create_user.sh  nsswitch.conf  supervisord
coding/: tmux.conf  zshrc
coding/python-poetry/poetry-demo/: pyproject.toml
compose/: .gitignore  README.md
compose/django/: .gitignore  Dockerfile  README.md  docker-compose.yml  host-mysite.conf  mysite.conf  pyproject.toml  requirements.txt
compose/django/django-data/: mysite_uwsgi.ini
compose/django/nginx/: Dockerfile  mysite_nginx.conf  nginx.conf
compose/django/nginx/conf.d/: default.conf
compose/django/php/: Dockerfile  config.inc.php  php-fpm.conf
compose/django/uwsgi/: Dockerfile  requirements.txt
compose/django/web/: Dockerfile  mysite_uwsgi.ini  requirements.txt
composetest/: app.py
data/: parser.R
eg_sshd/: Dockerfile
gcc-cmake-gl/: Dockerfile  bashrc
neo4j/: Dockerfile  neo4j-server.properties  supervisord.conf
registry/: Dockerfile  toolkit.py
rethinkdb/: Dockerfile
supervisor/: virtuoso
systemd/: Dockerfile
virtuoso/: Dockerfile  README.txt  supervisord  virtuoso.sh
(+133 files in other folders)
