[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Django + Daphne + MySQL in a docker composed image"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.6"
mysqlclient = "^2.1.1"
python-decouple = "^3.7"
uwsgi = "^2.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
